Fixed: Browser refresh bug Fixed firefox and edge bug Switched no election and dataless Changed default seats grid to be truly white Added outlines to state leans in federal balance Got arial black to work on firefox

--- a/css/styling.css
+++ b/css/styling.css
@@ -175,6 +175,7 @@ h1 {
 .fontCustom {
     font-family: Arial Black;
     font-size: 46px;
+    font-weight:900
 }
 
 .fontTitle {
@@ -253,6 +254,10 @@ path.domain {
     color: #9e9e9e;
     position: absolute;
     bottom: 20px;
+}
+
+.updateDataFont2 {
+    color: #9e9e9e;
 }
 
 /** Navbar  **/
